# trakt_mcpserver

./: .dockerignore  .env.example  .gitignore  =0.11.13  CLAUDE.md  Dockerfile  Dockerfile.stdio  README.md  VERSION.txt  config.py  deploy.sh  docker-compose.yml  docker_entrypoint.py  env.example  example.py  models.py  pr_summary.md  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  test_favorited.py  test_mcp.py  test_played_watched.py  trakt-mcp-server.service  trakt.apib  trakt_client.py  utils.py
.github/workflows/: push_ghcr.yml
client/: __init__.py  base.py  endpoints.py  pool.py  validation.py
client/auth/: __init__.py  client.py
client/checkin/: __init__.py  client.py
client/comments/: __init__.py  client.py  details.py  episode.py  movie.py  season.py  show.py
client/episodes/: __init__.py  client.py  lists.py  people.py  ratings.py  stats.py  summary.py  translations.py  utils.py  videos.py  watching.py
client/movies/: __init__.py  anticipated.py  boxoffice.py  client.py  details.py  people.py  popular.py  related.py  stats.py  trending.py  videos.py
client/people/: __init__.py  client.py  lists.py  movies.py  shows.py  summary.py  utils.py
client/progress/: __init__.py  client.py  playback.py  show_progress.py
client/recommendations/: __init__.py  client.py  movies.py  shows.py
client/search/: __init__.py  client.py
client/seasons/: __init__.py  client.py  episodes.py  info.py  lists.py  people.py  ratings.py  stats.py  translations.py  utils.py  videos.py  watching.py
client/shows/: __init__.py  anticipated.py  client.py  details.py  people.py  popular.py  related.py  seasons.py  stats.py  trending.py  videos.py
client/sync/: __init__.py  client.py  history_client.py  ratings_client.py  watchlist_client.py
client/user/: __init__.py  client.py
config/: __init__.py  errors.py
config/api/: __init__.py  constants.py  lists.py  sync.py
config/auth/: __init__.py  constants.py
config/endpoints/: __init__.py  auth.py  checkin.py  comments.py  episodes.py  keys.py  movies.py  people.py  progress.py  recommendations.py  search.py  seasons.py  shows.py  sync.py  user.py
config/mcp/: __init__.py  descriptions.py  resources.py  tools.py
models/: __init__.py
models/auth/: __init__.py  auth.py
models/checkin/: __init__.py  checkin.py
models/formatters/: __init__.py  auth.py  checkin.py  comments.py  episodes.py  movies.py  people.py  progress.py  search.py  (+9 more)
server/: __init__.py  http_server.py  main.py
tests/: __init__.py  conftest.py  test_architecture_compliance.py  test_mcp_compliance.py  types_stub.py
utils/: validation.py  validators.py
(+247 files in other folders)
